force-app/main/default/objects/copado__UISection__mdt/fields/copado__Extension_Package_Configuration__c.field-meta.xml
<CustomField>
    <fullName>copado__Extension_Package_Configuration__c</fullName>
    <label>Extension Package Configuration</label>
    <referenceTo>copado__ExtensionPackageConfiguration__mdt</referenceTo>
    <relationshipLabel>UISections</relationshipLabel>
    <relationshipName>UISections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>