force-app/main/default/objects/copado__UISection__mdt/fields/copado__WhereIsThisUsed__c.field-meta.xml
<CustomField>
    <fullName>copado__WhereIsThisUsed__c</fullName>
    <label>Where is this used?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>